# Gomoku

./: .gitattributes  .gitignore  CMakeLists.txt  ReadMe.md
Design/: DesignUML.uxf
a.src/backend/core/: CMakeLists.txt
a.src/backend/core/UT/: Anomaly.cpp  CMakeLists.txt  MinMaxTest.cpp  OpenBookTest.cpp  SpotterTest.cpp  Threat2CaseAATest.cpp  Threat2CaseCTest.cpp  Threat3CaseATest.cpp  Threat4CaseATest.cpp  ThreatWinnerTest.cpp  VectorLightTest.cpp
a.src/backend/core/inc/: GomokuBoard.h  GomokuGame.h  Score.h  Spotter.h  ThreatTracker.h
a.src/backend/core/src/: OpenBook.cpp
backend/: CMakeLists.txt  GomokuGameCLI.h  main.cpp
backend/DbgTools/: GameTreePlot.py
backend/ci/UT/: GomokuBoardTest.cpp  OpenBookTest.cpp  SingleListTest.cpp  Threat2CaseATest.cpp  Threat2CaseBTest.cpp  Threat3CaseBTest.cpp  Threat4CaseATest.cpp  VectorUniqueTest.cpp
backend/cmake/: google-test.cmake
backend/core/: CMakeLists.txt
backend/core/UT/: AlphaBetaTest.cpp  Anomaly.cpp  Anomaly1.cpp  CMakeLists.txt  EvalBoardTest.cpp  GomokuBoardTest.cpp  MinMaxTest.cpp  OpenBookTest.cpp  SingleListTest.cpp  Threat2CaseATest.cpp  Threat2CaseBTest.cpp  Threat3CaseAATest.cpp  Threat3CaseBTest.cpp  Threat3CaseCTest.cpp  Threat4CaseAATest.cpp  Threat4CaseBTest.cpp  ThreatTrackerTest.cpp  VectorUniqueTest.cpp
backend/core/inc/: GomokuBoard.h  GomokuGame.h
backend/core/inc/DataContainers/: SingleListIterator.h
backend/core/inc/Heuristics/: AlphaBeta.h  TreeLogger.h
backend/core/inc/Interfaces/: IBoard.h  IGame.h  ISearchTree.h
backend/core/inc/Threats/: Threat3CaseA.h  Threat3CaseAA.h  Threat3CaseB.h  ThreatFinder.h  ThreatWinner.h  ThreatsBloodRelation.h
backend/core/src/: GomokuGame.cpp  OpenBook.cpp  Spotter.cpp
backend/core/src/Heuristics/: AlphaBeta.cpp  EvalBoard.cpp  MinMax.cpp
backend/core/src/Threats/: Threat2CaseB.cpp  Threat3CaseB.cpp  Threat3CaseC.cpp  ThreatFinder.cpp  ThreatWinner.cpp  ThreatsBloodRelation.cpp
backend/src/: GomokuGame.h  OpenBook.h  main.cpp
backend/src/DataContainers/: VectorUnique.h
backend/src/Heuristics/: EvalBoard.cpp  EvalBoard.h
backend/src/Threats/: Threat2CaseA.cpp  Threat2CaseB.cpp  Threat2CaseB.h  Threat3CaseA.cpp  Threat3CaseAA.cpp  Threat3CaseB.cpp  Threat4CaseA.cpp  Threat4CaseAA.cpp  ThreatFinder.cpp  ThreatWinner.cpp  ThreatWinner.h  ThreatsBloodRelation.cpp
ci/: Jenkinsfile
ci/UT/: AlphaBetaTest.cpp  CMakeLists.txt  EvalBoardTest.cpp  GomokuBoardTest.cpp  ScoreTest.cpp  SingleListTest.cpp  SpotterTest.cpp  Threat2CaseAATest.cpp  Threat2CaseATest.cpp  Threat2CaseBTest.cpp  Threat2CaseCTest.cpp  Threat3CaseAATest.cpp  Threat3CaseATest.cpp  Threat3CaseBTest.cpp  Threat3CaseCTest.cpp  Threat4CaseAATest.cpp  Threat4CaseATest.cpp  Threat4CaseBTest.cpp  Threat4CaseCTest.cpp  ThreatTrackerTest.cpp  ThreatWinnerTest.cpp  VectorLightTest.cpp  VectorUniqueTest.cpp
ci/UT/GomokuBoardTest/: GomokuBoardTest.cpp
ci/UT/GraphTest/: GraphTest.cpp
ci/UT/StubsGlobal/: GomokuGame.hpp
ci/UT/VectorLightTest/: VectorLightTest.cpp
frontend/GUI/: .gitignore  CMakeLists.txt  Cell.qml  GoButton.qml  GomokuBoard.qml  GomokuGameClientGUI.cpp  GomokuGameClientGUI.h  GomokuGameGUI.cpp  GomokuGameGUI.h  GomokuGameServerGUI.cpp  GomokuGameServerGUI.h  Main.qml  Notification.qml  Score.qml  main.cpp
frontend/GUI/protobuf/: messages.proto
legacy/trunk/GomokuGame_SRC/: CMakeLists.txt  main.cpp
legacy/trunk/GomokuGame_SRC/Headers/: Board.hpp  BoardIterator.hpp  BoardScore.hpp  GomokuBoard.hpp  GomokuGame.hpp  Logger.hpp  ObserverIf.hpp  OpenBook.hpp  Score.hpp  Spotter.hpp  TwoPlayerGame.hpp
legacy/trunk/GomokuGame_UT/: CMakeLists.txt  main.cpp
src/: Board.h  Board.hpp  BoardIterator.cpp  BoardIterator.h  CMakeLists.txt  Exceptions.h  GomokuBoard.cpp  GomokuBoard.h  GomokuBoard.hpp  GomokuGame.cpp  Score.cpp  Score.h  Spotter.cpp  Spotter.h  ThreatTracker.cpp  ThreatTracker.h  main.cpp
src/DataContainers/: Graph.cpp  Graph.hpp  GraphIterator.cpp  GraphIterator.h  GraphIterator.hpp  IteratorIf.hpp  PriorityQueue.h  PriorityQueue.hpp  SingleListIterator.h  SingleListIterator.hpp  VectorLight.cpp  VectorLight.h  VectorLight.hpp  VectorLightIterator.cpp  VectorLightIterator.h
src/Headers/: Board.hpp  BoardIterator.hpp  BoardScore.hpp  GomokuGame.hpp  Logger.hpp  ObserverIf.hpp  OpenBook.hpp  Score.hpp  SinglethonTemplate.h  Spotter.hpp  TwoPlayerGame.hpp
src/Headers/DataContainers/: Graph.h  Graph.hpp  GraphIterator.hpp  SingleList.hpp  VectorLightIterator.hpp  VectorUnique.hpp
src/Headers/SearchAlgorithms/: AlphaBeta.hpp  MinMax.hpp  SearchTreeAlgorithmIf.hpp  StateEvaluation.hpp  StateEvaluationIf.hpp
src/Headers/Threats/: Threat2CaseA.hpp  Threat2CaseAA.hpp  Threat2CaseB.hpp  Threat2CaseC.hpp  Threat3CaseA.hpp  Threat3CaseAA.hpp  Threat3CaseB.hpp  Threat3CaseC.hpp  Threat4CaseA.hpp  Threat4CaseAA.hpp  Threat4CaseB.hpp  Threat4CaseC.hpp  ThreatFinder.hpp  ThreatWinner.hpp  ThreatsBloodRelation.hpp
src/Heuristics/: AlphaBeta.cpp  EvalBoard.cpp
src/Interfaces/: IBoard.h  IEvalBoard.h  IIterator.h  IObserver.h  ISpotter.h
src/Sources/: BoardScore.cpp  GomokuBoard.cpp  GomokuGame.cpp  Logger.cpp  OpenBook.cpp  Score.cpp  Spotter.cpp
src/Sources/DataContainers/: Graph.cpp
src/Sources/SearchAlgorithms/: AlphaBeta.cpp  MinMax.cpp  StateEvaluation.cpp
src/Sources/Threats/: Threat2CaseA.cpp  Threat2CaseAA.cpp  Threat2CaseB.cpp  Threat2CaseC.cpp  Threat3CaseA.cpp  Threat3CaseAA.cpp  Threat3CaseB.cpp  Threat3CaseC.cpp  Threat4CaseA.cpp  Threat4CaseAA.cpp  Threat4CaseB.cpp  Threat4CaseC.cpp  ThreatFinder.cpp  ThreatWinner.cpp
src/Threats/: Threat2CaseA.cpp  Threat2CaseA.h  Threat2CaseAA.cpp  Threat2CaseAA.h  Threat2CaseB.cpp  Threat2CaseB.h  Threat2CaseC.cpp  Threat2CaseC.h  Threat3CaseA.cpp  Threat3CaseA.h  Threat3CaseAA.cpp  Threat3CaseAA.h  Threat3CaseB.cpp  Threat3CaseB.h  Threat3CaseC.cpp  Threat3CaseC.h  Threat4CaseA.cpp  Threat4CaseA.h  Threat4CaseAA.cpp  Threat4CaseAA.h  Threat4CaseB.cpp  Threat4CaseB.h  Threat4CaseC.cpp  Threat4CaseC.h  ThreatFinder.cpp  ThreatFinder.h  ThreatWinner.cpp  ThreatWinner.h  ThreatsBloodRelation.cpp
(+259 files in other folders)
